--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "ansi-colors": "^4.1.3",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^3.7.3",
     "next": "10.0.6",
     "next-auth": "3.29.10",
     "react": "17.0.1",
